# binance-spot-rs

./: Cargo.toml  README.md
src/: lib.rs
src/auth/: ed25519_signer.rs  mod.rs  signature_provider.rs
src/clients/: common.rs  mod.rs  trait.rs
src/clients/rest/: account.rs  client.rs  general.rs  market_data.rs  mod.rs  ticker.rs  trading.rs
src/clients/tests/: account.rs  advanced_trading.rs  general.rs  helpers.rs  market_data.rs  mod.rs  ticker.rs  trading.rs
src/clients/websocket/: account.rs  client.rs  general.rs  market_data.rs  mod.rs  ticker.rs  trading.rs
src/config/: binance_config.rs  mod.rs  rest_config.rs  stream_config.rs  websocket_config.rs
src/enums/: allocation_type.rs  cancel_replace_mode.rs  cancel_replace_status.rs  cancel_restrictions.rs  contingency_type.rs  mod.rs  order_list_order_status.rs  order_list_status.rs  order_rate_limit_exceeded_mode.rs  order_response_type.rs  order_side.rs  order_status.rs  order_type.rs  permission.rs  rate_limit_interval.rs  rate_limit_type.rs  self_trade_prevention_mode.rs  symbol_status.rs  time_in_force.rs  trade_group.rs  working_floor.rs
src/errors/: api_error.rs  binance_error.rs  error_categories.rs  mod.rs  request_error.rs  server_error.rs  trading_error.rs  validation_errors.rs
src/filters/: exchange_filter.rs  mod.rs  parse_filter_failure.rs  parse_trading_rejection.rs  symbol_filter.rs
src/filters/exchange/: exchange_max_num_algo_orders_filter.rs  exchange_max_num_iceberg_orders_filter.rs  exchange_max_num_orders_filter.rs  mod.rs
src/streams/: client.rs  mod.rs
(+136 files in other folders)
